--- a/bfs_um/caliper.config
+++ b/bfs_um/caliper.config
@@ -6,3 +6,11 @@ CALI_CUPTITRACE_ACTIVITIES=device,uvm
 CALI_SERVICES_ENABLE=cuptitrace,report
 CALI_CUPTITRACE_ACTIVITIES=device,uvm
 CALI_REPORT_CONFIG="select cupti.uvm.kind as Kind,count(),scale(cupti.uvm.bytes,1e-6) as MB,scale(cupti.activity.duration,1e-9) as Time group by cupti.uvm.kind where cupti.uvm.kind format table"
+
+# [uvm-tracking]
+CALI_SERVICES_ENABLE=alloc,cupti,cuptitrace,trace,recorder
+CALI_ALLOC_RESOLVE_ADDRESSES=true
+CALI_CUPTI_CALLBACK_DOMAINS=sync
+CALI_CUPTITRACE_ACTIVITIES=uvm
+CALI_CUPTITRACE_CORRELATE_CONTEXT=false
+CALI_CUPTITRACE_FLUSH_ON_SNAPSHOT=true
