--- a/bfs_um/caliper.config
+++ b/bfs_um/caliper.config
@@ -14,3 +14,7 @@ CALI_CUPTI_CALLBACK_DOMAINS=sync
 CALI_CUPTITRACE_ACTIVITIES=uvm
 CALI_CUPTITRACE_CORRELATE_CONTEXT=false
 CALI_CUPTITRACE_FLUSH_ON_SNAPSHOT=true
+
+# [nvbit-trace]
+CALI_SERVICES_ENABLE=alloc,trace,recorder
+CALI_ALLOC_RESOLVE_ADDRESSES=true
