Add Caliper support for matmul

--- a/matmul_um/Makefile
+++ b/matmul_um/Makefile
@@ -1,10 +1,16 @@
+
+CUDA_HOME=/usr/tce/packages/cuda/cuda-11.0.2
+CALIPER_DIR=${HOME}/local/caliper/lassen-gcc8-cuda11
+
 CC := $(CUDA_HOME)/bin/nvcc
 CUDA_LIB_DIR := $(CUDA_HOME)/lib64
 CFLAGS := -gencode arch=compute_60,code=sm_60 -gencode arch=compute_70,code=sm_70
-INCLUDE := .
+INCLUDE := $(CALIPER_DIR)/include
 SRC := main.cu util.cu
 OBJ := $(SRC:.cu=.o)
 EXE=umtest
+
+LFLAGS = -L$(CALIPER_DIR)/lib64 -lcaliper-serial -lcuda
 
 .PHONY: test run_oversub profile trace
 
@@ -12,7 +18,7 @@ EXE=umtest
 	$(CC) -c $(CFLAGS) $(CPPFLAGS) -o $@ $< -I$(INCLUDE)
 
 $(EXE): clean $(OBJ) util.h
-	$(CC) $(CFLAGS) $(CPPFLAGS) -o $(EXE) $(OBJ) -L$(CUDA_LIB_DIR) 
+	$(CC) $(CFLAGS) $(CPPFLAGS) -o $(EXE) $(OBJ) -L$(CUDA_LIB_DIR) $(LFLAGS)
 
 test: $(EXE)
 	env MATRIX_DIM=1024 ./$(EXE)
